<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.usc.aquehoraes.LoginActivity" >

    <EditText
        android:id="@+id/txtNombreEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNombreEvento"
        android:layout_below="@+id/txtNombreEvento"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCancelar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="50dp"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/btnAceptar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancelar"
        android:layout_alignBottom="@+id/btnCancelar"
        android:layout_alignRight="@+id/txtNombreEvento"
        android:layout_marginRight="26dp"
        android:text="@string/aceptar" />

</RelativeLayout>
